Added some more baseplate functionality in component class

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="main_page">
   <div class="poll_element">
+    <p>{{ message }}</p>
     <p class="poll_question">Question</p>
     <ul>
-      <li class="poll_option"><button (click)="select()">Option 2</button></li>
+      <li class="poll_option"><button (click)="select()">Option 1</button></li>
       <li class="poll_option"><button (click)="select()">Option 2</button></li>
     </ul>
   </div>
