--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,17 @@
 .poll_element {
-    border-style: double;
+    border-style: solid;
+    border-radius: 20px;
+    border-color: lightcyan;
+    background-color:  lightcyan;
+    width: 65%;
+    margin: auto;
+    padding: 10px;
 }
 
 .poll_question {
     font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: auto;
 }
 
 .poll_option {
