Started testing backend connection

--- a/src/app/poll.component.html
+++ b/src/app/poll.component.html
@@ -1,7 +1,7 @@
 <div class="main_page">
   <p>{{ message }}</p>
   {{load()}}
-
+  <a href="/account">Sign Up Here</a>
   <!--Main poll content-->
   <!--For every poll in in the loaded results, repeat this div element-->
   <div *ngFor="let poll of allPolls" class="poll_element">
