Added temporary load button to not spam load calls to backend

--- a/src/app/poll.component.html
+++ b/src/app/poll.component.html
@@ -1,6 +1,6 @@
 <div class="main_page">
   <p>{{ message }}</p>
-  {{load()}}
+  <button (click)="load()">Load Polls</button>
   <a href="/account">Sign Up Here</a>
   <!--Main poll content-->
   <!--For every poll in in the loaded results, repeat this div element-->
