Added poll and account creation methods along with dummy data

--- a/src/app/poll.component.html
+++ b/src/app/poll.component.html
@@ -1,6 +1,7 @@
 <div class="main_page">
   <p>{{ message }}</p>
   <button (click)="load()">Load Polls</button>
+  <button (click)="createDummyData()">Create Dummy Polls</button>
   <a href="/account">Sign Up Here</a>
   <!--Main poll content-->
   <!--For every poll in in the loaded results, repeat this div element-->
