--- a/src/app/poll.component.html
+++ b/src/app/poll.component.html
@@ -1,4 +1,6 @@
 <div class="main_page">
+    <base href="/poll">
+
   <p>{{ message }}</p>
   <button (click)="load()">Load Polls</button>
   <button (click)="createDummyData()">Create Dummy Polls</button>
