--- a/src/styles.css
+++ b/src/styles.css
@@ -25,3 +25,17 @@ ul.header_button li a {
     padding: 20px 25px;
     border-radius: 50px;
 }
+
+#down_gradient {
+    background-image: linear-gradient(to bottom, rgba(245,245,245,1), rgba(245,245,245,0));
+    height: 20px;
+    width: 100%;
+    display: block;
+}
+
+#up_gradient {
+    background-image: linear-gradient(to top, rgba(255, 0, 0), rgba(245,245,245,0));
+    height: 20px;
+    width: 100%;
+    display: block;
+}
