--- a/src/app/poll.component.html
+++ b/src/app/poll.component.html
@@ -1,5 +1,5 @@
 <div class="main_page">
-    <base href="/poll">
+
 
   <p>{{ message }}</p>
   <button (click)="load()">Load Polls</button>
@@ -13,5 +13,9 @@
       <li class="poll_option"><button (click)="select(poll, option)">{{option}}</button></li>
     </ul>
   </div>
+  <div>
+  
+  </div>
+
   
 </div>
