--- a/src/app/signup.component.html
+++ b/src/app/signup.component.html
@@ -1,8 +1,22 @@
-<head>
-    <base href="/signup">
-
-</head>
-<body>
-
-    <h1>SIGN UP HERE!!!!!!!!</h1>
-</body>
+<div>
+  <form>
+    <ul>
+      <li>
+        <label for="signup-username">Username</label>
+        <input type="text" id="signup-username" name="signup-username">
+      </li>
+      <li>
+        <label for="signup-password">Password</label>
+        <input type="password" id="signup-password" name="signup-password">
+      </li>
+      <li>
+        <label for="signup-password-confirmation">Retype Password</label>
+        <input type="password" id="signup-password-confirmation" name="signup-password-confirmation">
+      </li>
+      <br>
+      <li>
+        <input type="submit" value="Sign Up">
+      </li>
+    </ul>
+  </form>
+</div>
