--- a/src/styles.css
+++ b/src/styles.css
@@ -26,16 +26,18 @@ ul.header_button li a {
     border-radius: 50px;
 }
 
-#down_gradient {
-    background-image: linear-gradient(to bottom, rgba(245,245,245,1), rgba(245,245,245,0));
-    height: 20px;
-    width: 100%;
+.down_gradient {
+    background-image: linear-gradient(to bottom, rgba(255, 0, 0,1), rgba(245,245,245,0));
+    height: 30px;
+    width: 150%;
     display: block;
+    
 }
 
-#up_gradient {
-    background-image: linear-gradient(to top, rgba(255, 0, 0), rgba(245,245,245,0));
-    height: 20px;
-    width: 100%;
+.up_gradient {
+    background-image: linear-gradient(to top, rgba(255, 0, 0, 1), rgba(245,245,245,0));
+    height: 30px;
+    width: 150%;
     display: block;
+
 }
