Signing up with an account now brings you to the summary page WITH ACCOUNT OBJECT PASSED

--- a/src/app/signup.component.html
+++ b/src/app/signup.component.html
@@ -18,7 +18,8 @@
         <button (click)="signUp()">Submit</button>
       </li>
       @if (accountCreateSuccess == true){
-        <p>Account {{usernameField}} Created!!</p>
+        <!--This if block will never be shown anymore since if success we immedatbly go to account summary-->
+        <p>Account {{createdAccount?.username}} Created!!</p>
       }
       @else if (accountCreateSuccess == false){
         <p>Something went wrong in account creation</p>
