--- a/src/app/poll.component.html
+++ b/src/app/poll.component.html
@@ -14,7 +14,33 @@
     </ul>
   </div>
   <div>
-  
+  <footer>
+    <input type="button" value="Create Poll">
+    <br>
+    <ul>
+      <li>
+        <label for="option-1">Option 1:</label>
+        <input type="text" id="option-1" name="option-1">
+      </li>
+      <br>
+      <li>
+        <label for="option-2">Option 2:</label>
+        <input type="text" id="option-2" name="option-2">
+      </li>
+      <br>
+      <li>
+        <label for="option-3">Option 3:</label>
+        <input type="text" id="option-3" name="option-3">
+      </li>
+      <br>
+      <li>
+        <label for="option-4">Option 4:</label>
+        <input type="text" id="option-4" name="option-4">
+      </li>
+      <br>
+      <input type="submit" value="Submit Poll">
+    </ul>
+  </footer>
   </div>
 
   
