--- a/src/app/signup.component.html
+++ b/src/app/signup.component.html
@@ -12,10 +12,11 @@
       <li>
         <label for="signup-password-confirmation">Retype Password</label>
         <input type="password" id="signup-password-confirmation" name="signup-password-confirmation">
+        
       </li>
       <br>
       <li>
-        <input type="submit" value="Sign Up">
+        <button type="submit">Sign Up</button>
       </li>
     </ul>
   </form>
