--- a/src/app/summary.component.html
+++ b/src/app/summary.component.html
@@ -1,1 +1,8 @@
-Username | Polls Made | Polls Done
+<div>
+    Username: | Polls Made: | Polls Done:
+</div>
+<div>
+    <h1>User's Polls Go Here</h1>
+    <!-- When instantiating the polls, need to also add the removal button to all of them -->
+    <button type="submit">Delete</button>
+</div>
