Password and confirm password fields now must match to continue sign up

--- a/src/app/signup.component.html
+++ b/src/app/signup.component.html
@@ -11,7 +11,7 @@
       </li>
       <li>
         <label for="signup-password-confirmation">Retype Password</label>
-        <input type="password" id="signup-password-confirmation" name="signup-password-confirmation">
+        <input type="password" id="signup-password-confirmation" name="signup-password-confirmation" [(ngModel)]="confirmPasswordField">
         
       </li>
       <br>
