Added log in capabilities and abstracted poll-option recreation logic in poll services class

--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -4,11 +4,11 @@
     <ul>
       <li>
         <label for="login-username">Username</label>
-        <input type="text" id="login-username" name="login-username">
+        <input type="text" id="login-username" name="login-username" [(ngModel)]="usernameField">
       </li>
       <li>
         <label for="login-password">Password</label>
-        <input type="password" id="login-password" name="login-password">
+        <input type="password" id="login-password" name="login-password" [(ngModel)]="passwordField">
       </li>
       <br>
       <li>
