--- a/src/app/signup.component.html
+++ b/src/app/signup.component.html
@@ -20,7 +20,7 @@
       </li>
       @if (accountCreateSuccess == true){
         <!--This if block will never be shown anymore since if success we immedatbly go to account summary-->
-        <p>Account {{createdAccount?.username}} Created!!</p>
+        <p>Account {{currentAccount?.username}} Created!!</p>
       }
       @else if (accountCreateSuccess == false){
         <p>Something went wrong in account creation</p>
