Many small frontend changes to setup poll voting

--- a/src/app/poll.component.html
+++ b/src/app/poll.component.html
@@ -16,6 +16,8 @@
       </ul>
       <button (click)="createNewPoll()">Create Poll</button>
     </div>
+
+    <button (click)="createDummyData()">Create Dummy Data</button>
   }
   <!--Show all polls in the database-->
   <!--For every poll in in the loaded results, repeat this div element-->
