Added notification of what account you are logged in as on signup and login pages

--- a/src/app/signup.component.html
+++ b/src/app/signup.component.html
@@ -1,4 +1,10 @@
 <div>
+  <div>
+  @if (currentAccount?.uuid){
+    <div>
+      <p>You are currently logged in as {{currentAccount?.username}}</p>
+    </div>
+  }
   <form>
     <ul>
       <li>
