--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -1,5 +1,10 @@
 
 <div>
+  @if (currentAccount?.uuid){
+    <div>
+      <p>You are currently logged in as {{currentAccount?.username}}</p>
+    </div>
+  }
   <form>
     <ul>
       <li>
