Change options to use an interface

--- a/src/app/poll.component.html
+++ b/src/app/poll.component.html
@@ -25,7 +25,7 @@
     <p class="poll_question">{{ poll.question }}</p>
     <!--For every option inside this poll, repeat this list element-->
     <ul *ngFor="let option of poll.options">
-      <li class="poll_option"><button (click)="select(poll, option)">{{option}}</button></li>
+      <li class="poll_option"><button (click)="select(poll, option)">{{option.content}}</button></li>
     </ul>
   </div>
 </div>
