Consolidated user authentication in auth service and updated to use jwt token

--- a/src/app/components/poll/poll.component.css
+++ b/src/app/components/poll/poll.component.css
@@ -7,7 +7,7 @@
     margin: auto;
     margin-top: 10px;
     padding: 10px;
-    overflow-y: scroll;
+    overflow-y: hidden;
     scroll-snap-type: y mandatory;
     scroll-snap-align: start none;
     scroll-margin-block: 10px;
@@ -21,4 +21,8 @@
 
 .poll_option {
     list-style-type: circle;
+}
+
+.user-voted {
+    background-color: lightgreen;
 }
