--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,9 +1,4 @@
 <div>
-  @if (currentAccount?.uuid){
-    <div>
-      <p>You are currently logged in as {{currentAccount?.username}}</p>
-    </div>
-  }
   <div>
   <form>
     <ul>
@@ -21,17 +16,11 @@
         
       </li>
       <br>
-      <li>
-        <button (click)="signUp()">Submit</button>
-      </li>
-      @if (accountCreateSuccess == true){
-        <!--This if block will never be shown anymore since if success we immedatbly go to account summary-->
-        <p>Account {{currentAccount?.username}} Created!!</p>
-      }
-      @else if (accountCreateSuccess == false){
-        <p>Something went wrong in account creation</p>
-      }
+      <button (click)="signUp()">Submit</button>
 
+      @if (errorMessage) {
+        <p style="color: red;">{{ errorMessage }}</p>
+      }
 
     </ul>
   </form>
