--- a/src/styles.css
+++ b/src/styles.css
@@ -12,19 +12,28 @@ ul.header_button {
     
 }
 
+
+
 ul.header_button li {
     float: unset;
 }
 
 ul.header_button li a {
     display: block;
-    color: aliceblue;
-    background-color: #17121f;
+    color: black;
+    background-color: rgb(158, 218, 238);
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 20px 25px;
     border-radius: 50px;
+    margin: 10px;
 }
+
+ul.header_button li a:hover {
+    background-color: rgb(118, 167, 184);
+}
+
+
 
 .down_gradient {
     background-image: linear-gradient(to bottom, rgba(255, 0, 0,1), rgba(245,245,245,0));
