Added log out button

--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -3,6 +3,7 @@
   @if (currentAccount?.uuid){
     <div>
       <p>You are currently logged in as {{currentAccount?.username}}</p>
+      <button (click)="logOut()">Log Out</button>
     </div>
   }
   <form>
