Added a generic styling for text field sections of the website, such as for creating accounts and polls

--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -1,11 +1,11 @@
 
-<div>
   @if (currentAccount?.uuid){
     <div>
       <p>You are currently logged in as {{currentAccount?.username}}</p>
       <button (click)="logOut()">Log Out</button>
     </div>
   }
+<div class="submission">
   <form>
     <ul>
       <li>
