--- a/src/app/signup.component.html
+++ b/src/app/signup.component.html
@@ -1,10 +1,9 @@
-<div>
   @if (currentAccount?.uuid){
     <div>
       <p>You are currently logged in as {{currentAccount?.username}}</p>
     </div>
   }
-  <div>
+<div class="submission">
   <form>
     <ul>
       <li>
