--- a/src/app/poll.component.css
+++ b/src/app/poll.component.css
@@ -22,3 +22,9 @@
 .poll_option {
     list-style-type: circle;
 }
+
+.create_poll_question {
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-right: 0.5%;
+}
