--- a/src/app/poll.component.html
+++ b/src/app/poll.component.html
@@ -1,24 +1,26 @@
 <div class="main_page">
-  <button (click)="togglePollCreation()">Create Your Own Poll</button>
-  @if (isCreatingPoll){
-    <div>
-      <label for="question">Question</label>
-      <input type="text" id="question" name="question" [(ngModel)]="questionField">
-      <ul>
-        @for (op of optionsFields; track i; let i = $index) {
-          <li>
-            <label for="option">Option {{i+1}}:</label>
-            <input type="text" id="option" name="option" [(ngModel)]="optionsFields[i]">
-          </li>
-          <br>
-        }
-        <button (click)="addOptionField()">Add Option</button>
-      </ul>
-      <button (click)="createNewPoll()">Create Poll</button>
-    </div>
+  <div class="submission">
+    <button (click)="togglePollCreation()">Create Your Own Poll</button>
+    @if (isCreatingPoll){
+      <div>
+        <label class="create_poll_question" for="question">Question:</label>
+        <input type="text" id="question" name="question" [(ngModel)]="questionField">
+        <ul>
+          @for (op of optionsFields; track i; let i = $index) {
+            <li>
+              <label for="option">Option {{i+1}}:</label>
+              <input type="text" id="option" name="option" [(ngModel)]="optionsFields[i]">
+            </li>
+            <br>
+          }
+          <button (click)="addOptionField()">Add Option</button>
+        </ul>
+        <button (click)="createNewPoll()">Create Poll</button>
+      </div>
 
-    <button (click)="createDummyData()">Create Dummy Data</button>
-  }
+      <button (click)="createDummyData()">Create Dummy Data</button>
+    }
+  </div>
   <!--Show all polls in the database-->
   <!--For every poll in in the loaded results, repeat this div element-->
   <div *ngFor="let poll of allPolls" class="poll_element">
