--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     background-color: whitesmoke;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: medium;
 }
 
 ul.header_button {
     position: sticky;
+    top: 10px;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    
     
 }
 
@@ -23,10 +27,10 @@ ul.header_button li a {
     color: black;
     background-color: rgb(158, 218, 238);
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 20px 25px;
     border-radius: 50px;
     margin: 10px;
+    text-decoration: none;
 }
 
 ul.header_button li a:hover {
