--- a/src/app/submission_forms.css
+++ b/src/app/submission_forms.css
@@ -16,6 +16,12 @@
         margin: 10px;
         font-size: medium;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        transition: 200ms;
+    }
+
+    button:hover {
+        transition: 500ms;
+        background-color: rgb(255, 194, 80);
     }
     input{
         padding: 12px 20px;
