Alot of work for minor changes

--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -1,10 +1,11 @@
 
   @if (currentAccount?.uuid){
     <div>
-      <p>You are currently logged in as {{currentAccount?.username}}</p>
-      <button (click)="logOut()">Log Out</button>
+      <p class="alt-text">You are currently logged in as {{currentAccount?.username}}</p>
+      <button (click)="logOut()" class="logout">Log Out</button>
     </div>
   }
+  @else {
 <div class="submission">
   <form>
     <ul>
@@ -30,3 +31,4 @@
       }
   </form>
 </div>
+  }
