--- a/src/app/poll.component.css
+++ b/src/app/poll.component.css
@@ -42,11 +42,48 @@
 }
 
 .poll_option {
+    opacity: 0;
+    visibility: hidden;
     list-style-type: circle;
+    transition: 200ms;
 }
+
+.poll_element:hover .poll_option {
+    visibility: visible;
+    opacity: 1;
+    transition: 200ms;
+}
+
 
 .create_poll_question {
     font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-right: 0.5%;
+    padding-top: 10;
 }
+
+.create-button{
+    position: fixed;
+    background-color: coral;
+    color: white;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    padding: 20px 25px;
+    border-radius: 50px;
+    margin: 10px;
+    font-size: medium;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transition: 200ms;
+}
+
+.create-button:hover {
+    transition: 500ms;
+    background-color: rgb(255, 194, 80);
+}
+
+.entry-fields {
+    overflow-wrap: normal;
+    align-content: center;
+}
+
