--- a/src/app/submission_forms.css
+++ b/src/app/submission_forms.css
@@ -38,3 +38,44 @@
         padding-right: 1%;
     }
 }
+
+div.submission {
+    align-self: center;
+    align-items: center;
+    width: 60%;
+}
+
+.alt-text {
+    padding: 40px 50px;
+    background-color: rgb(31, 137, 156);
+    font-size: x-large;
+    color: rgb(255, 255, 255);
+    align-self: center;
+    text-align: center;
+    text-decoration: underline;
+}
+
+button.logout {
+    align-items: center;
+    align-self: center;
+    align-content: center;
+}
+.logout {
+    display: block;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    padding: 20px 25px;
+    border-radius: 50px;
+    margin: 10px;
+    font-size: medium;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transition: 200ms;
+}
+
+.logout:hover{
+    transition: 500ms;
+    background-color: rgb(255, 72, 0);
+}
