--- a/src/app/poll.component.css
+++ b/src/app/poll.component.css
@@ -24,6 +24,7 @@
     font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: auto;
+    
 }
 
 .poll_element:hover {
@@ -86,7 +87,8 @@
 
 .create-button:hover {
     transition: 500ms;
-    background-color: rgb(255, 194, 80);
+    background-color: rgb(255, 189, 66);
+    scale: 1.1;
 }
 
 .entry-fields {
@@ -101,13 +103,14 @@
     border-radius: 20px;
     transition: 200ms;
     border-width: 0px;
-    border-color: rgb(27, 162, 207);
+    border-color: rgb(0, 0, 0);
     padding-right: 50px;
     padding-left: 15px;
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: large;
     text-align: left;
+    border-style: solid;
 
 }   
 
@@ -116,5 +119,5 @@
     scale: 1.1;
     color: black;
     transition: 500ms;
-    border-width: 5px;
+    border-width: 3px;
 }
