Revert "Merge branch 'master' into auth"
This reverts commit f4736dbe371427c2a6e65647a94739e59edea62f, reversing
changes made to 3aa11a5324efeafac35d566bb238e1b4995de534.

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,4 @@
 
-  @if (currentAccount?.uuid){
-    <div>
-      <p class="alt-text">You are currently logged in as {{currentAccount?.username}}</p>
-      <button (click)="logOut()" class="logout">Log Out</button>
-    </div>
-  }
-  @else {
 <div class="submission">
   <form>
     <ul>
@@ -18,17 +11,12 @@
         <input type="password" id="login-password" name="login-password" [(ngModel)]="passwordField">
       </li>
       <br>
-      <li>
-        <button (click)="logIn()">Log In</button>
-      </li>
+        <button (click)="logIn()">Login</button>
     </ul>
-      @if (loginSuccess == true){
-        <!--This if block will never be shown anymore since if success we immedatbly go to account summary-->
-        <p>Account {{currentAccount?.username}} logged in!</p>
-      }
-      @else if (loginSuccess == false){
-        <p>Something went wrong in account log in</p>
-      }
+    
+    @if (errorMessage) {
+      <p style="color: red;">{{ errorMessage }}</p>
+    }
+    
   </form>
 </div>
-  }
