--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,5 @@
-body, html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: medium;
-    padding: 0;
-    margin: 0;
-}
-
-.page {
-    display: grid;
-    grid-template-areas: 
-    "header"
-    "content";
-    grid-template-rows: 100px 90%;
-}
-
-.page div.header {
-    z-index: 10;
-    position: sticky;
-    top: 0;
-    grid-area: header;
-
-    color: black;
+/* You can add global styles to this file, and also import other style files */
+body {
     background-color: whitesmoke;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
@@ -40,11 +20,9 @@ ul.header_button {
 
 ul.header_button li {
     float: unset;
-    align-items: center;
 }
 
-
-.page div.header ul li a {
+ul.header_button li a {
     display: block;
     color: black;
     background-color: rgb(158, 218, 238);
@@ -69,7 +47,10 @@ ul.header_button li a:hover {
     
 }
 
-.page div.header ul li a:hover{
-    background-color: rgb(153, 224, 248);
-    transition: 200ms;
+.up_gradient {
+    background-image: linear-gradient(to top, rgba(255, 0, 0, 1), rgba(245,245,245,0));
+    height: 30px;
+    width: 150%;
+    display: block;
+
 }
